--- a/src/components/Orders/orders.css
+++ b/src/components/Orders/orders.css
@@ -4,3 +4,16 @@
     margin: 80px auto;
 
 }
+.btn-processed{
+    .btn-processed{
+        width: 90%;
+        height: 56px;
+        font-size: 21px;
+        margin: 10px auto;
+        background-color: rgb(179, 158, 199);
+        color: rgb(255, 255, 255);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
